--- a/.github/workflows/sync_domin.yml
+++ b/.github/workflows/sync_domin.yml
@@ -15,6 +15,6 @@ jobs:
         with:
           owner: NoahAmethyst
           repo: Blog-Index
-          github_token: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           workflow_file_name: docker.yml
           trigger_workflow: true
