-- CI/CD  - change update pod workflow

--- a/.github/workflows/update_pod.yml
+++ b/.github/workflows/update_pod.yml
@@ -10,12 +10,18 @@ jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: update kubernetes pod
-        uses: appleboy/ssh-action@v1.0.0
+      - name: Update Pod
+        uses: NoahAmethyst/kuber-opt-action@v1.0.0
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          script: |
-            chatgpt_web=$(kubectl get pods -l app=chatgpt-web -o jsonpath='{.items[0].metadata.name}')
-            kubectl delete pod $chatgpt_web
+          server: ${{ secrets.GRPC_SERVER }}
+          action: delete-pod
+          app: ${{ secrets.APP }}
+#      - name: update kubernetes pod
+#        uses: appleboy/ssh-action@v1.0.0
+#        with:
+#          host: ${{ secrets.SERVER_HOST }}
+#          username: ${{ secrets.SERVER_USERNAME }}
+#          password: ${{ secrets.SERVER_PASSWORD }}
+#          script: |
+#            chatgpt_web=$(kubectl get pods -l app=chatgpt-web -o jsonpath='{.items[0].metadata.name}')
+#            kubectl delete pod $chatgpt_web
