-- fix  - change workflow's param:app from secret to public

--- a/.github/workflows/update_pod.yml
+++ b/.github/workflows/update_pod.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           server: ${{ secrets.GRPC_SERVER }}
           action: delete-pod
-          app: ${{ secrets.APP }}
+          app: chatgpt-web
 #      - name: update kubernetes pod
 #        uses: appleboy/ssh-action@v1.0.0
 #        with:
